--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+@font-face {
+  font-family: "KumbhBold";
+  src: local("Kumbh_Sans"),
+    url("./assets/fonts/Kumbh_Sans/static/KumbhSans-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "KumbhRegular";
+  src: local("Kumbh_Sans"),
+    url("./assets/fonts/Kumbh_Sans/static/KumbhSans-Regular.ttf") format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #F2F2F2;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
